--- a/src/app/card-rosa/card-rosa.component.html
+++ b/src/app/card-rosa/card-rosa.component.html
@@ -1,5 +1,5 @@
 <div class="card">
     <div class="card__plan card__item">Plano <b>Completo</b></div>
     <div class="card__price card__item">R$250,00/Mês</div>
-    <div class="card__button card__item">Adquirir</div>
+<app-card-rosa-button></app-card-rosa-button>
 </div>
