Estilos CSS Dentro do Componente (prop styles)

--- a/src/app/card-rosa-button/card-rosa-button.component.scss
+++ b/src/app/card-rosa-button/card-rosa-button.component.scss
@@ -3,7 +3,7 @@
     text-align: center;
     margin-top: 10px;
     border-radius: 25px;
-    background-color: rgb(133, 105, 105);
+    background-color: #631212;
     cursor: pointer;
     font-weight: bold;
     padding: 10px;
