--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -2,5 +2,6 @@
     <div class="card__plan card__item">Plano <b>{{plano.infos.tipo}}</b></div>
     <div class="card__price card__item">{{plano.infos.preco }}</div>
     <app-card-button></app-card-button>
+    <app-card-button-cancel></app-card-button-cancel>
 </div>
 
