Utilização do Seletor :host”

--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -21,7 +21,7 @@
     }
 
 }
-::ng-deep .card-button-cancel {
+:host ::ng-deep .card-button-cancel {
     background-color: yellow !important;
 }
    
