--- a/src/app/card-rosa/card-rosa.component.html
+++ b/src/app/card-rosa/card-rosa.component.html
@@ -2,4 +2,5 @@
     <div class="card__plan card__item">Plano <b>Completo</b></div>
     <div class="card__price card__item">R$250,00/Mês</div>
 <app-card-rosa-button></app-card-rosa-button>
+<app-card-button-cancel></app-card-button-cancel>
 </div>
