--- a/src/app/card-rosa/card-rosa.component.html
+++ b/src/app/card-rosa/card-rosa.component.html
@@ -3,5 +3,6 @@
     <div class="card__price card__item">R$250,00/Mês</div>
 <app-card-rosa-button></app-card-rosa-button>
 <app-card-button-cancel id = "primeiro"></app-card-button-cancel>
-<app-card-button-cancel id = "segundo"></app-card-button-cancel>
+<mat-slide-toggle>receba papai</mat-slide-toggle>
+
 </div>
