--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -3,5 +3,7 @@
     <div class="card__price card__item">{{plano.infos.preco }}</div>
     <app-card-button></app-card-button>
     <app-card-button-cancel></app-card-button-cancel>
+    <mat-slide-toggle id="custom">receba papai</mat-slide-toggle>
+   
 </div>
 
