--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
 //@import "./styles/global-overrides";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-slide-toggle  {
+    background-color: rgb(219, 96, 96) !important;
+}
